# AndroidProjects

./: README.md  test  txt
ActionBar/app/: build.gradle
AnTest/app/: build.gradle
Animator/app/: build.gradle
Another/app/: build.gradle
BCForceQuit/app/: build.gradle
BasicGLsv/app/: build.gradle
BeatIt/app/: build.gradle
BidirSliding/app/: build.gradle
BleSun/: settings.gradle
BleSun/app/: build.gradle  proguard-rules.pro
BroadcastTest/app/: build.gradle
CameraFrame/: settings.gradle
CameraFrame/FastVideo/: AndroidManifest.xml  build.gradle
CameraFrame/YiCameraP2PSDK/: AndroidManifest.xml  build.gradle
CameraFrame/app/: CMakeLists.txt  build.gradle
CameraTst/app/: build.gradle
ChoosePic/app/: build.gradle
ClientTest/app/: build.gradle
CollapsingTextView/app/: build.gradle
Contacts/app/: build.gradle
CustomView/app/: build.gradle
EditImageXmp/app/: build.gradle
FRPDemo/app/: build.gradle
FilePersistenceTest/app/: build.gradle
Fragment/app/: build.gradle
GLsvKube/app/: build.gradle
HelloWorld/app/: build.gradle
ImageSwitch/app/: build.gradle
KotlinTest/app/: build.gradle
LaunchMode/app/: build.gradle
LivePush/app/: build.gradle
LoadMore/app/: build.gradle
MapS/app/: build.gradle
MyApp0525/app/: build.gradle
MyFloatWindow/app/: build.gradle
MyRocket/app/: build.gradle
OESRecord/: settings.gradle
OESRecord/app/: build.gradle
OESRecord/vrplayer/: build.gradle
PPPPTest/: settings.gradle
PPPPTest/FastVideo/: .project
PPPPTest/P2PSDK/: .gitignore  .project  build.gradle  build.xml
PPPPTest/app/: build.gradle
PWFalls/app/: build.gradle
PanoStitch/app/: CMakeLists.txt  build.gradle
PanoStitch/app/src/androidTest/java/com/panostitch/: ExampleInstrumentedTest.java
PanoStitch/app/src/main/: AndroidManifest.xml
PanoStitch/app/src/main/cpp/: imageStitch.cpp  native-lib.cpp
PanoStitch/app/src/main/cpp/fisheye_stitch/: CameraMetadata.cpp  CameraMetadata.h  FeatureBasedOptimization.cpp  FeatureBasedOptimization.h  FisheyePanoParams.cpp  FisheyePanoParams.h  FisheyePanoStitcherComp.cpp  FisheyePanoStitcherComp.h  FisheyeStereoStitcher.cpp  FisheyeStereoStitcher.h  ImageBlender.cpp  ImageBlender.h  ImageColorAdjuster.cpp  ImageColorAdjuster.h  ImageIOConverter.cpp  ImageIOConverter.h  ImageOptFlow.cpp  ImageOptFlow.h  ImageTailor.cpp  ImageTailor.h  ImageWarpTable.cpp  ImageWarpTable.h  ImageWarper.cpp  ImageWarper.h  MappingCL.h  MatrixVectors.cpp  MatrixVectors.h  ShaderClass.cpp  ShaderClass.h  YiPanoramaTypes.h
PanoStitch/app/src/main/java/com/: Stitcher.java
PanoStitch/app/src/main/java/com/panostitch/: CombineParams.java  MainActivity.java  Stitcher.java
PanoStitch/app/src/main/res/layout/: activity_main.xml
PanoStitch/app/src/main/res/values/: strings.xml
PanoStitch/app/src/test/java/com/panostitch/: ExampleUnitTest.java
PhoneWall/app/: build.gradle
PhotoLoading/: local.properties
PhotoLoading/app/: build.gradle
ProgressBar/app/: build.gradle  proguard-rules.pro
VRPlayer/: build.gradle
WifiP2P/: local.properties
gpuImageEdit/: local.properties
(+1637 files in other folders)
